# flowent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .release-it.json  Dockerfile  Dockerfile.dev  README.md  components.json  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.mts
backend/: pyproject.toml
backend/src/flowent/: __init__.py  _version.py  access.py  agent.py  cli.py  dev.py  events.py  graph_runtime.py  graph_service.py  image_assets.py  logging.py  main.py  mcp_service.py  model_metadata.py  registry.py  role_management.py  runtime.py  sandbox.py  security.py  settings.py  settings_management.py  state_db.py  stats_service.py  workspace_store.py
backend/src/flowent/channels/: __init__.py  telegram.py
backend/src/flowent/models/: __init__.py  content.py  delta.py  graph.py  history.py  message.py  tab.py  todo.py
backend/src/flowent/prompts/: __init__.py  common.py  steward.py
backend/src/flowent/providers/: __init__.py  anthropic.py  configuration.py  content.py  errors.py  gateway.py  gemini.py  headers.py  management.py  ollama.py  openai.py  openai_responses.py  registry.py  sse.py
backend/src/flowent/routes/: __init__.py  access.py  assistant.py  image_assets.py  mcp.py  meta.py  nodes.py  prompts.py  providers_route.py  roles.py  settings.py  stats.py  tabs.py  ws.py
backend/src/flowent/tools/: __init__.py  connect.py  contacts.py  create_agent.py  create_tab.py  delete_tab.py  edit.py  exec.py  fetch.py  idle.py  list_roles.py  list_tabs.py  list_tools.py  manage_prompts.py  manage_providers.py  manage_roles.py  manage_settings.py  mcp.py  read.py  send.py  set_permissions.py  sleep.py  todo.py
backend/src/flowent_api/: __init__.py  _version.py  access.py  agent.py  assistant_commands.py  cli.py  config.py  dev.py  events.py  graph_runtime.py  graph_service.py  image_assets.py  logging.py  main.py  mcp_service.py  model_metadata.py  registry.py  role_management.py  runtime.py  sandbox.py  security.py  settings.py  settings_management.py  settings_store.py  state_db.py  stats_service.py  workspace_store.py
backend/src/flowent_api/channels/: __init__.py  telegram.py
backend/src/flowent_api/models/: __init__.py  agent.py  blueprint.py  content.py  delta.py  event.py  graph.py  history.py  llm.py  message.py  tab.py  todo.py
backend/src/flowent_api/prompts/: __init__.py
backend/src/flowent_api/providers/: __init__.py  anthropic.py  configuration.py  content.py  errors.py  gateway.py  gemini.py  management.py  ollama.py  openai.py  openai_responses.py  registry.py  sse.py
backend/src/flowent_api/routes/: __init__.py  access.py  assistant.py  image_assets.py  mcp.py  meta.py  nodes.py  prompts.py  providers_route.py  roles.py  settings.py  stats.py  tabs.py  ws.py
backend/src/flowent_api/tools/: __init__.py  connect.py  contacts.py  create_agent.py  create_tab.py  delete_tab.py  edit.py  exec.py  fetch.py  idle.py  list_roles.py  list_tabs.py  list_tools.py  manage_prompts.py  manage_providers.py  manage_roles.py  manage_settings.py  mcp.py  read.py  send.py  set_permissions.py  sleep.py  todo.py
backend/tests/: conftest.py  test_settings_api.py  test_settings_store.py
backend/tests/integration/api/: conftest.py  test_access_api.py  test_assistant_api.py  test_frontend_mounting.py  test_mcp_api.py  test_meta_api.py  test_nodes_api.py  test_prompts_api.py  (+1 more)
backend/tests/unit/: test_access.py  test_cli.py  test_graph_runtime.py  test_network.py  test_state_sqlite_storage.py  test_workspace_store.py
(+496 files in other folders)
