[project]
name = "synode"
version = "0.1.0"
description = "A structured multi-agent framework for coordinated AI collaboration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "N",
    "RUF",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
