[project]
name = "flowent"
version = "0.0.1"
description = "A workflow orchestration platform for multi-agent collaboration."
authors = [
    { name = "ImFeH2", email = "i@feh2.im" }
]
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[project.scripts]
flowent = "flowent:main"

[project.urls]
Homepage = "https://github.com/ImFeH2/flowent"
Repository = "https://github.com/ImFeH2/flowent"
Issues = "https://github.com/ImFeH2/flowent/issues"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
